# fsm_prototype

./: .gitattributes  .mxproject  CMakeLists.txt  GEMINI.md  PLAN_MOVE_CMSIS.md  PLAN_PLATFORM_LIBRARY.md  README.md  STM32U5g9xx_FLASH.ld  fsm_prototype.code-workspace  fsm_prototype.ioc
Drivers/BSP/STM32U5G9J-DK2/: STM32U5G9J-DK2_BSP_User_Manual.chm
EWARM/: Project.eww  fsm_prototype.ewd  fsm_prototype.ewp  stm32u5g9xx_sram.icf
Inc/: stm32u5xx_it.h
STM32CubeIDE/: .cproject  .project  STM32U5G9ZJTXQ_FLASH.ld  STM32U5G9ZJTXQ_RAM.ld  fsm_prototype.launch
STM32CubeIDE/Debug/: makefile  objects.list  sources.mk
STM32CubeIDE/Debug/Application/Startup/: subdir.mk
STM32CubeIDE/Debug/Application/User/: subdir.mk
STM32CubeIDE/Debug/Drivers/BSP/STM32U5G9J-DK2/: subdir.mk
STM32CubeIDE/Debug/Drivers/CMSIS/: subdir.mk
STM32CubeIDE/Debug/Drivers/STM32U5xx_HAL_Driver/: subdir.mk
STM32CubeIDE/Debug/Middlewares/RTOS2/CMSIS/RTOS2/Core/TZ_Non_Supported/: subdir.mk
STM32CubeIDE/Debug/Middlewares/RTOS2/CMSIS/RTOS2/Heap/Heap_2/: subdir.mk
Src/: app_freertos.c  stm32u5xx_hal_msp.c  stm32u5xx_it.c
application/: CMakeLists.txt
application/fsm_task/: CMakeLists.txt
application/fsm_task/include/: app_freertos.h
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
platform/: CMakeLists.txt
platform/os/FreeRTOS/Config/: FreeRTOSConfig.h
platform/st/bsp/STM32U5G9J-DK2/: TODO.md
platform/st/bsp/STM32U5G9J-DK2/Config/: stm32u5g9j_discovery_conf.h  stm32u5xx_hal_conf.h
platform/st/bsp/STM32U5G9J-DK2/Core/Inc/: stm32u5xx_it.h
platform/st/bsp/STM32U5G9J-DK2/Core/Src/: stm32u5xx_hal_msp.c  stm32u5xx_it.c
projects/fsm_prototype/: CMakeLists.txt  STM32U5g9xx_RAM.ld
projects/fsm_prototype/include/: main.h
projects/fsm_prototype/src/: main.c
